hard-gists/101323115e70bb6671d3/run.log
=== Docker Run Log for 101323115e70bb6671d3 ===
Started at: Mi 29. Okt 11:45:05 CET 2025

[2025-10-29 11:45:06] START: Running container for 101323115e70bb6671d3
[2025-10-29 11:45:06] SUCCESS: Container 82cea39bbae18e9d1bf2171d425fa22b3b63b4373077e68367c45105d0c8d199 started for 101323115e70bb6671d3
=== Container logs for 101323115e70bb6671d3 ===
  File "/snippet.py", line 51
    print "--------------------------------------------------------"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 101323115e70bb6671d3 ===
[2025-10-29 11:45:08] INFO: Container 82cea39bbae18e9d1bf2171d425fa22b3b63b4373077e68367c45105d0c8d199 has stopped
